tests/snapshot/inputs/errors/invalid_record_type.ncl
# capture = 'stderr'
# command = []

{a: Number, b = 1; r}